<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_restorant"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_res_color" />


    <TextView
        android:id="@+id/fragment_forget_pass_txt_email"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_the_code_you_are_recive_it_here"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/fragment_forget_pass_et_code"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_below="@+id/fragment_forget_pass_txt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:background="@drawable/circle"
        android:hint="@string/code"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"

        />

    <TextView
        android:id="@+id/fragment_forget_pass_txt_new_pass"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/fragment_forget_pass_et_code"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/please_enter_your_new_password_here"
        android:padding="10dp"

        android:textColorHint="@color/white"
        android:textSize="20dp"

        />


    <EditText
        android:id="@+id/fragment_forget_pass_et_pass"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_below="@+id/fragment_forget_pass_txt_new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:background="@drawable/circle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"

        />

    <EditText
        android:id="@+id/fragment_forget_pass_et_pass_confirm"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_below="@+id/fragment_forget_pass_et_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle"
        android:hint="@string/password_confirmation"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textSize="20dp"

        />


    <Button
        android:id="@+id/fragment_forget_pass_btn_send"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/fragment_forget_pass_et_pass_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_grident"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>
