<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <EditText
        android:id="@+id/fragment_forget_pass_et_old_pass"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_gray2"
        android:hint="@string/oldpassword"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        android:inputType="textPassword"

        />


    <EditText
        android:id="@+id/fragment_restourant_change_pass_et_new_pass"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:background="@drawable/circle_gray2"
        android:hint="@string/new_password"
        android:padding="10dp"
        android:layout_marginTop="110dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        android:inputType="textPassword"

        />

    <EditText
        android:id="@+id/fragment_restourant_change_pass_et_new_pass_confirm"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_below="@+id/fragment_restourant_change_pass_et_new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_gray2"
        android:hint="@string/password_confirmation"
        android:padding="10dp"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        android:inputType="textPassword"

        />


    <Button
        android:id="@+id/fragment_forget_pass_btn_send"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/fragment_restourant_change_pass_et_new_pass_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_grident"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>
