<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_110sdp"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/gray">

    <TextView
        android:id="@+id/dialo_add_txt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/log_out_txt"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />


    <Button
        android:id="@+id/dialog_yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/dialo_add_txt"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_40ssp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_grident"
        android:text="@string/yes"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dialog_no_btn"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/dialo_add_txt"
        android:layout_marginStart="@dimen/_40ssp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_grident"
        android:text="@string/no"
        android:textSize="20sp" />


</RelativeLayout>